--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="hojas-de-estilos/index.css">
 </head>
 <body>
+
+    <header>
+            <div class="contenedor-flex" >
+              <div class="">Menu</div>
+              <div class="">Mail</div>
+              <div class="">My Food</div>
+            </div>
+    </header>
+
     <div class="contenedor-grid">
 
         <div class="d1">
@@ -100,5 +109,12 @@
         </div>
     </div>
     
+    <footer>
+        <div class="w3-third">
+            <h3>FOOTER</h3>
+            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+            <p>Powered by <a href="" target="_blank">org.animals</a></p>
+          </div>
+    </footer>
 </body>
 </html>
