agrega clases al contenedor secundario

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         </div>
     </div>
 
-    <div class="">
+    <div class="contenedor-secundario">
         <h3 class="texto-centrado">About Me, The Food Man</h3><br>
-        <img src="" alt="Me" class="">
+        <img src="./imagenes/imagen-principal.jpg" alt="paisaje">
         <div class="">
             <h4 class="texto-centrado"><b>I am Who I Am!</b></h4>
             <h6 class="texto-centrado"><i>With Passion For Real, Good Food</i></h6>
