--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
         </div>
     </div>
-    <div class="texto-centrado">
+  <!--   <div class="texto-centrado">
         <div class="">
             <a href="#" class="">«</a>
             <a href="#" class="">1</a>
@@ -126,15 +126,15 @@
             <a href="#" class="">4</a>
             <a href="#" class="">»</a>
         </div>
-    </div>
+    </div> -->
 
     <div class="contenedor-secundario">
         <h3 class="texto-centrado">About Me, The Food Man</h3><br>
         <img src="./imagenes/imagen-principal.jpg" alt="paisaje">
-        <div class="">
+        <div>
             <h4 class="texto-centrado"><b>I am Who I Am!</b></h4>
             <h6 class="texto-centrado"><i>With Passion For Real, Good Food</i></h6>
-            <p class="texto-centrado">Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of
+            <p class="texto-centrado texto-secundario">Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of
                 lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus
                 ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
                 Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
