modifica estructura base
la estructura fue movida a un contenedor principal

--- a/index.html
+++ b/index.html
@@ -11,113 +11,115 @@
 
 <body>
 
-    <header>
-        <div class="contenedor-flex">
-            <div class="">Menu</div>
-            <div class="">Mail</div>
-            <div class="">My Food</div>
-        </div>
-    </header>
+    <div class="contenedor-pagina">
 
-    <div class="contenedor-grid">
-        <div class="sombra-carta d1">
-            <img class="carta-img borde-r5" src="/imagenes/animal-1.jpg" alt="animal-1">
+        <header>
+            <div class="contenedor-flex">
+                <div class="">Menu</div>
+                <div class="">Mail</div>
+                <div class="">My Food</div>
+            </div>
+        </header>
 
-            <div class="carta-info">
-                <h3 class="texto-centrado">Nombre animal</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
-                <h4 class="texto-centrado">Descripcion animal</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
-                    placeat.</p>
+        <div class="contenedor-grid">
+            <div class="sombra-carta d1">
+                <img class="carta-img borde-r5" src="/imagenes/animal-1.jpg" alt="animal-1">
+
+                <div class="carta-info">
+                    <h3 class="texto-centrado">Nombre animal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
+                    <h4 class="texto-centrado">Descripcion animal</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
+                        placeat.</p>
+                </div>
+            </div>
+
+
+            <div class="sombra-carta d2">
+                <img class="carta-img borde-r5" src="/imagenes/animal-2.jpg" alt="animal-1">
+
+                <div class="carta-info">
+                    <h3 class="texto-centrado">Nombre animal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
+                    <h4 class="texto-centrado">Descripcion animal</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
+                        placeat.</p>
+                </div>
+            </div>
+
+            <div class="sombra-carta d3">
+                <img class="carta-img borde-r5" src="/imagenes/animal-3.jpg" alt="animal-1">
+
+                <div class="carta-info">
+                    <h3 class="texto-centrado">Nombre animal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
+                    <h4 class="texto-centrado">Descripcion animal</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
+                        placeat.</p>
+                </div>
+            </div>
+
+            <div class="sombra-carta d4">
+                <img class="carta-img borde-r5" src="/imagenes/animal-4.jpg" alt="animal-1">
+
+                <div class="carta-info">
+                    <h3 class="texto-centrado">Nombre animal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
+                    <h4 class="texto-centrado">Descripcion animal</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
+                        placeat.</p>
+                </div>
+            </div>
+
+            <div class="sombra-carta d5">
+                <img class="carta-img borde-r5" src="/imagenes/animal-5.jpg" alt="animal-1">
+
+                <div class="carta-info">
+                    <h3 class="texto-centrado">Nombre animal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
+                    <h4 class="texto-centrado">Descripcion animal</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
+                        placeat.</p>
+                </div>
+            </div>
+
+            <div class="sombra-carta d6">
+                <img class="carta-img borde-r5" src="/imagenes/animal-6.jpg" alt="animal-1">
+
+                <div class="carta-info">
+                    <h3 class="texto-centrado">Nombre animal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
+                    <h4 class="texto-centrado">Descripcion animal</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
+                        placeat.</p>
+                </div>
+            </div>
+
+            <div class="sombra-carta d7">
+                <img class="carta-img borde-r5" src="/imagenes/animal-7.jpg" alt="animal-1">
+
+                <div class="carta-info">
+                    <h3 class="texto-centrado">Nombre animal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
+                    <h4 class="texto-centrado">Descripcion animal</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
+                        placeat.</p>
+                </div>
+            </div>
+
+            <div class="sombra-carta d8">
+                <img class="carta-img borde-r5" src="/imagenes/animal-8.jpg" alt="animal-1">
+
+                <div class="carta-info">
+                    <h3 class="texto-centrado">Nombre animal</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
+                    <h4 class="texto-centrado">Descripcion animal</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
+                        placeat.</p>
+                </div>
             </div>
         </div>
-
-
-        <div class="sombra-carta d2">
-            <img class="carta-img borde-r5" src="/imagenes/animal-2.jpg" alt="animal-1">
-
-            <div class="carta-info">
-                <h3 class="texto-centrado">Nombre animal</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
-                <h4 class="texto-centrado">Descripcion animal</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
-                    placeat.</p>
-            </div>
-        </div>
-
-        <div class="sombra-carta d3">
-            <img class="carta-img borde-r5" src="/imagenes/animal-3.jpg" alt="animal-1">
-
-            <div class="carta-info">
-                <h3 class="texto-centrado">Nombre animal</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
-                <h4 class="texto-centrado">Descripcion animal</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
-                    placeat.</p>
-            </div>
-        </div>
-
-        <div class="sombra-carta d4">
-            <img class="carta-img borde-r5" src="/imagenes/animal-4.jpg" alt="animal-1">
-
-            <div class="carta-info">
-                <h3 class="texto-centrado">Nombre animal</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
-                <h4 class="texto-centrado">Descripcion animal</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
-                    placeat.</p>
-            </div>
-        </div>
-
-        <div class="sombra-carta d5">
-            <img class="carta-img borde-r5" src="/imagenes/animal-5.jpg" alt="animal-1">
-
-            <div class="carta-info">
-                <h3 class="texto-centrado">Nombre animal</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
-                <h4 class="texto-centrado">Descripcion animal</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
-                    placeat.</p>
-            </div>
-        </div>
-
-        <div class="sombra-carta d6">
-            <img class="carta-img borde-r5" src="/imagenes/animal-6.jpg" alt="animal-1">
-
-            <div class="carta-info">
-                <h3 class="texto-centrado">Nombre animal</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
-                <h4 class="texto-centrado">Descripcion animal</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
-                    placeat.</p>
-            </div>
-        </div>
-
-        <div class="sombra-carta d7">
-            <img class="carta-img borde-r5" src="/imagenes/animal-7.jpg" alt="animal-1">
-
-            <div class="carta-info">
-                <h3 class="texto-centrado">Nombre animal</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
-                <h4 class="texto-centrado">Descripcion animal</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
-                    placeat.</p>
-            </div>
-        </div>
-
-        <div class="sombra-carta d8">
-            <img class="carta-img borde-r5" src="/imagenes/animal-8.jpg" alt="animal-1">
-
-            <div class="carta-info">
-                <h3 class="texto-centrado">Nombre animal</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, natus eveniet!.</p>
-                <h4 class="texto-centrado">Descripcion animal</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum facilis repudiandae minima
-                    placeat.</p>
-            </div>
-        </div>
-    </div>
-  <!--   <div class="texto-centrado">
+        <!--   <div class="texto-centrado">
         <div class="">
             <a href="#" class="">«</a>
             <a href="#" class="">1</a>
@@ -128,63 +130,39 @@
         </div>
     </div> -->
 
-    <div class="contenedor-secundario">
-        <h3 class="texto-centrado">About Me, The Food Man</h3><br>
-        <img src="./imagenes/imagen-principal.jpg" alt="paisaje">
-        <div>
-            <h4 class="texto-centrado"><b>I am Who I Am!</b></h4>
-            <h6 class="texto-centrado"><i>With Passion For Real, Good Food</i></h6>
-            <p class="texto-centrado texto-secundario">Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of
-                lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus
-                ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
-                congue gravida diam non fringilla.</p>
+        <hr>
+
+        <div class="contenedor-secundario">
+            <h3 class="texto-centrado">Informacion sobre el ambiente de los animales</h3><br>
+            <img src="./imagenes/imagen-principal.jpg" alt="paisaje">
+            <div>
+                <h4 class="texto-centrado"><b>I am Who I Am!</b></h4>
+                <h6 class="texto-centrado"><i>With Passion For Real, Good Food</i></h6>
+                <p class="texto-centrado texto-secundario">Just me, myself and I, exploring the universe of unknownment.
+                    I have a heart of love and an interest of
+                    lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed
+                    tellus
+                    ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non
+                    fringilla.
+                    Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
+                    congue gravida diam non fringilla.</p>
+            </div>
         </div>
+
+        <hr>
+
+        <footer>
+
+            <div class="contenedor-footer">
+                <h3>FOOTER</h3>
+                <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
+                    congue gravida diam non fringilla.</p>
+                <p class="texto-centrado">Powered by <a href="" target="_blank">org.animals</a></p>
+            </div>
+
+        </footer>
+
     </div>
-
-    <footer>
-        <div class="">
-            <h3>FOOTER</h3>
-            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
-                congue gravida diam non fringilla.</p>
-            <p>Powered by <a href="" target="_blank">org.animals</a></p>
-        </div>
-        <div class="">
-            <h3>BLOG POSTS</h3>
-            <ul class="">
-                <li class="">
-                    <img src="" class="">
-                    <span class="">Lorem</span><br>
-                    <span>Sed mattis nunc</span>
-                </li>
-                <li class="">
-                    <img src="" class="">
-                    <span class="">Ipsum</span><br>
-                    <span>Praes tinci sed</span>
-                </li>
-            </ul>
-        </div>
-
-        <div class="">
-            <h3>POPULAR TAGS</h3>
-            <p>
-                <span class="">Travel</span> <span
-                    class="">New York</span> <span
-                    class="">Dinner</span>
-                <span class="">Salmon</span> <span
-                    class="">France</span> <span
-                    class="">Drinks</span>
-                <span class="">Ideas</span> <span
-                    class="">Flavors</span> <span
-                    class="">Cuisine</span>
-                <span class="">Chicken</span> <span
-                    class="">Dressing</span> <span
-                    class="">Fried</span>
-                <span class="">Fish</span> <span
-                    class="">Duck</span>
-            </p>
-        </div>
-    </footer>
 </body>
 
 </html>
